--- a/index/index.html
+++ b/index/index.html
@@ -26,7 +26,7 @@
             </a>
             <ul class="navbar-nav" id="navbar">
                 <li class="nav-item">
-                    <a class="nav-link" href="homepage.html" id="text">Homepage</a>
+                    <a class="nav-link" href="index.html" id="text">Homepage</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="calculator.html" id="text">Grade Calculator</a>
@@ -63,4 +63,5 @@
     </footer>
 
 </body>
+
 </html>
