--- a/calculator.html
+++ b/calculator.html
@@ -28,7 +28,7 @@
             </a>
             <ul class="navbar-nav" id="navbar">
                 <li class="nav-item">
-                    <a class="nav-link" href="homepage.html" id="text">Homepage</a>
+                    <a class="nav-link" href="index/index.html" id="text">Homepage</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="calculator.html" id="text">Grade Calculator</a>
@@ -89,4 +89,5 @@
     </footer>
 
 </body>
+
 </html>
