--- a/clubs.html
+++ b/clubs.html
@@ -28,7 +28,7 @@
             </a>
             <ul class="navbar-nav" id="navbar">
                 <li class="nav-item">
-                    <a class="nav-link" href="homepage.html" id="text">Homepage</a>
+                    <a class="nav-link" href="index/index.html" id="text">Homepage</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="calculator.html" id="text">Grade Calculator</a>
@@ -70,4 +70,5 @@
         <p>Calvin Garcia | 10-Topaz | © 2024 TOSKA Academy. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
